[package]
name = "freestyle-sandboxes"
version = "0.1.0"
edition = "2024"

[dependencies]
async-recursion = "1"
base64 = "0.22"
bytes = "1.9"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4", features = ["derive"], optional = true }
futures-core = "0.3"
progenitor-client = "0.13.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread", "macros"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "freestyle"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "dev_environment"

[[example]]
name = "watch_and_reload"

[[example]]
name = "load_test"
